<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about.contacts">Контакты</string>
    <string name="about.feedback">Отзыв о приложении</string>
    <string name="about.privacy_policy">Политика конфиденциальности</string>
    <string name="about.questions">Часто задаваемые вопросы</string>
    <string name="about.rules">Правила</string>
    <string name="about.terms_and_conditions">Условия и положения</string>
    <string name="about.what_is_new">Что нового?</string>
    <string name="action.accept">Принять</string>
    <string name="action.accept_coupon_changes">Принять изменения</string>
    <string name="action.activate_promo_code">Ввести промокод</string>
    <string name="action.add_to_coupon">В купон</string>
    <string name="action.add_to_favourites">Добавить в избранное</string>
    <string name="action.add_to_saved_quotes">Сохранить</string>
    <string name="action.attach_files">Прикрепить файлы</string>
    <string name="action.cancel">Отменить</string>
    <string name="action.cancel_deposit_limits_change">Отменить изменение лимитов</string>
    <string name="action.cancel_email_change">Отменить изменение Email</string>
    <string name="action.cancel_email_confirmation">Отменить подтверждение Email</string>
    <string name="action.cancel_ident">Отменить идентификацию</string>
    <string name="action.cancel_password_change">Отменить изменение пароля</string>
    <string name="action.cancel_password_recovery">Отменить восстановление пароля</string>
    <string name="action.cancel_phone_change">Отменить изменение номера телефона</string>
    <string name="action.cancel_phone_confirmation">Отменить подтверждение номера телефона</string>
    <string name="action.cancel_process">Отменить процесс</string>
    <string name="action.cancel_sign_up">Отменить регистрацию</string>
    <string name="action.chat">Чат</string>
    <string name="action.clear">Очистить</string>
    <string name="action.close_bet_view">Закрыть</string>
    <string name="action.close_with_countdown">Закрыть можно через %s сек.</string>
    <string name="action.complete_verification">Завершить идентификацию</string>
    <string name="action.continue_process">Продолжить ></string>
    <string name="action.copy">Скопировать</string>
    <string name="action.create_ticket_from_operation">Задать вопрос по расчету</string>
    <string name="action.delete">Удалить</string>
    <string name="action.fill_data">Заполнить данные</string>
    <string name="action.find">Найти</string>
    <string name="action.go_back">Назад</string>
    <string name="action.go_to_chat">Связаться с поддержкой</string>
    <string name="action.go_to_deposit">Пополнить баланс</string>
    <string name="action.go_to_full_ident">Увеличить лимиты</string>
    <string name="action.go_to_ident">Завершить</string>
    <string name="action.go_to_tickets">К запросам</string>
    <string name="action.later">Позже</string>
    <string name="action.pay">Пополнить</string>
    <string name="action.pay.short">Пополнить</string>
    <string name="action.place_bet">Заключить пари</string>
    <string name="action.publish_draft_ticket">Опубликовать</string>
    <string name="action.receive_confirmation_code">Далее</string>
    <string name="action.recover_password">Восстановить пароль</string>
    <string name="action.remove_from_coupon">Из купона</string>
    <string name="action.remove_from_favourites">Удалить из избранного</string>
    <string name="action.remove_from_saved_quotes">Удалить</string>
    <string name="action.reset_bet_2_stake">Сбросить предыдущую ставку</string>
    <string name="action.reset_bet_2_tutorial">Сбросить туториал</string>
    <string name="action.reset_password">Сменить пароль</string>
    <string name="action.retry">Повторить</string>
    <string name="action.save">Сохранить</string>
    <string name="action.select_all">Выбрать все</string>
    <string name="action.send">Отправить</string>
    <string name="action.send_confirmation_code">Далее</string>
    <string name="action.share">Поделиться</string>
    <string name="action.sign_in">Войти</string>
    <string name="action.sign_out">Выйти</string>
    <string name="action.sign_out_from_account">Выйти из аккаунта</string>
    <string name="action.sign_up">Зарегистрироваться</string>
    <string name="action.skip">Пропустить</string>
    <string name="action.support">Перейти к чату с техподдержкой</string>
    <string name="action.un_select_all">Сбросить все</string>
    <string name="action.what_do">Что делать?</string>
    <string name="action_call_support">Позвонить %s</string>
    <string name="action_email_support">Написать %s</string>
    <string name="action_find_clubs">Найти ближайшие клубы</string>
    <string name="action_verificate">Пройти идентификацию</string>
    <string name="already_authorized">Вы уже авторизованы</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_access_denied_notif_1" />
    <string name="app_access_denied_notif_2" />
    <string name="app_name">Фонбет</string>
    <string name="app_name_debug">RU Debug</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_changes_setting_hint">Зажмите кнопку и выберите настройку принятия изменений коэффициентов</string>
    <string name="attachment.camera">Сделать фото</string>
    <string name="attachment.pdf">Прикрепить документ PDF</string>
    <string name="balance_type.freebets">Фрибеты</string>
    <string name="balance_type.monetary">Со счета</string>
    <string name="bet.current_balance">Баланс %s</string>
    <string name="bet.delay">Пари будет рассмотрено через %d с.</string>
    <string name="bet.msg.current_balance">Вам доступно</string>
    <string name="bet.number">Номер пари</string>
    <string name="bet.potential_win_range">%1$s – %2$s</string>
    <string name="bet.success">Пари принято</string>
    <string name="bet.title.balance">БАЛАНС</string>
    <string name="bet_hint.free_bet">Фрибет</string>
    <string name="bet_hint.risk_free_bet">Беспроигрышное пари</string>
    <string name="bet_hint.unsupported_bonus_bet">Бонусное пари</string>
    <string name="bet_sell.action">Продать</string>
    <string name="bet_sell.confirmation">Вы действительно хотите продать пари?</string>
    <string name="bet_sell.drawer_title">Продажа пари</string>
    <string name="bet_sell.message.price_after_sold">Сумма продажи</string>
    <string name="bet_sell.message.sold">Сумма продажи: %s</string>
    <string name="bet_sell.no_confirmation_next_time">В следующий раз дополнительного подтверждения не потребуется</string>
    <string name="bet_sell.price">Продать пари за %s</string>
    <string name="bet_sell.price_changed">Цена пари в данный момент составляет %s. Вы согласны на эти изменения?</string>
    <string name="bet_sell.settings.item_1">Не продавать без подтверждения</string>
    <string name="bet_sell.settings.item_1_short">Не продавать</string>
    <string name="bet_sell.settings.item_2">При изменении суммы вверх</string>
    <string name="bet_sell.settings.item_2_short">Изменение вверх</string>
    <string name="bet_sell.settings.item_3">При любом изменении суммы</string>
    <string name="bet_sell.settings.item_3_short">Любое изменение</string>
    <string name="bet_sell.settings.title">Продажа пари без подтверждения</string>
    <string name="bet_sell.success">Пари продано</string>
    <string name="bet_settings.favorite_bets_already_exist">Эта сумма уже используется</string>
    <string name="bet_settings.general_settings">Общие настройки</string>
    <string name="bet_settings.live_and_lane">Live и Прематч</string>
    <string name="bet_settings.not_authorized_notice">Настройки доступны только авторизованным пользователям</string>
    <string name="bet_settings.not_authorized_title">Вы не авторизованы</string>
    <string name="bet_settings.smart_bet">Смарт-ввод суммы</string>
    <string name="bet_settings.smart_bet_description">Вам доступен быстрый доступ к любимым или популярным суммам. Меняйте их через кнопки «плюс» или «минус», или нажмите на выбранное значение, чтобы изменить его вручную.</string>
    <string name="bet_settings_clear_coupon_title">Очищать купон после пари</string>
    <string name="bet_settings_fast_bet_limits" formatted="false">%s – %s %s</string>
    <string name="bet_settings_fast_bet_limits_2" formatted="false">%s %s – %s %s</string>
    <string name="bet_settings_fast_bet_max" formatted="false">Максимальная сумма пари %s %s</string>
    <string name="bet_settings_fast_bet_min" formatted="false">Минимальная сумма пари %s %s</string>
    <string name="bet_settings_favorite_bet_absolute_title">В валюте (%1$s)</string>
    <string name="bet_settings_favorite_bet_absolute_title_2">В валюте</string>
    <string name="bet_settings_favorite_bet_percent_title">В % от баланса</string>
    <string name="bet_settings_favorite_bets_hint_absolute_exists">Эта сумма уже используется</string>
    <string name="bet_settings_favorite_bets_hint_percent_exists">Этот процент уже используется</string>
    <string name="bet_settings_favorite_bets_hint_percent_limits">1%%–100%%</string>
    <string name="debug_settings_test_processes_action_open_link">Тестовые процессы</string>
    <string name="debug_settings_test_processes_device_id_title">Device ID</string>
    <string name="debug_settings_test_processes_title">Тестовые процессы</string>
    <string name="deposit_limits_per_day">В сутки</string>
    <string name="deposit_limits_per_month">В месяц</string>
    <string name="deposit_limits_per_week">В неделю</string>
    <string name="pin_pad_number_0">0</string>
    <string name="pin_pad_number_1">1</string>
    <string name="pin_pad_number_2">2</string>
    <string name="pin_pad_number_3">3</string>
    <string name="pin_pad_number_4">4</string>
    <string name="pin_pad_number_5">5</string>
    <string name="pin_pad_number_6">6</string>
    <string name="pin_pad_number_7">7</string>
    <string name="pin_pad_number_8">8</string>
    <string name="pin_pad_number_9">9</string>
</resources>