<?xml version="1.0" encoding="utf-8"?>
<merge android:id="@id/pin_pad_container" android:layout_width="@dimen/pin_pad_container_width" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button android:id="@id/pin_button_1" android:layout_width="@dimen/pin_pad_item_width" android:layout_height="@dimen/pin_pad_item_height" android:text="@string/pin_pad_number_1" app:layout_constraintEnd_toStartOf="@id/pin_button_2" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintHorizontal_chainStyle="spread" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/AppTheme.BorderlessButton.PinButton.Number" />
    <Button android:id="@id/pin_button_2" android:layout_width="@dimen/pin_pad_item_width" android:layout_height="@dimen/pin_pad_item_height" android:text="@string/pin_pad_number_2" app:layout_constraintEnd_toStartOf="@id/pin_button_3" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/pin_button_1" app:layout_constraintTop_toTopOf="parent" style="@style/AppTheme.BorderlessButton.PinButton.Number" />
    <Button android:id="@id/pin_button_3" android:layout_width="@dimen/pin_pad_item_width" android:layout_height="@dimen/pin_pad_item_height" android:text="@string/pin_pad_number_3" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/pin_button_2" app:layout_constraintTop_toTopOf="parent" style="@style/AppTheme.BorderlessButton.PinButton.Number" />
    <Button android:id="@id/pin_button_4" android:layout_width="@dimen/pin_pad_item_width" android:layout_height="@dimen/pin_pad_item_height" android:layout_marginTop="24.0dip" android:text="@string/pin_pad_number_4" app:layout_constraintEnd_toStartOf="@id/pin_button_5" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintHorizontal_chainStyle="spread" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/pin_button_1" style="@style/AppTheme.BorderlessButton.PinButton.Number" />
    <Button android:id="@id/pin_button_5" android:layout_width="@dimen/pin_pad_item_width" android:layout_height="@dimen/pin_pad_item_height" android:layout_marginTop="24.0dip" android:text="@string/pin_pad_number_5" app:layout_constraintEnd_toStartOf="@id/pin_button_6" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/pin_button_4" app:layout_constraintTop_toBottomOf="@id/pin_button_2" style="@style/AppTheme.BorderlessButton.PinButton.Number" />
    <Button android:id="@id/pin_button_6" android:layout_width="@dimen/pin_pad_item_width" android:layout_height="@dimen/pin_pad_item_height" android:layout_marginTop="24.0dip" android:text="@string/pin_pad_number_6" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/pin_button_5" app:layout_constraintTop_toBottomOf="@id/pin_button_3" style="@style/AppTheme.BorderlessButton.PinButton.Number" />
    <Button android:id="@id/pin_button_7" android:layout_width="@dimen/pin_pad_item_width" android:layout_height="@dimen/pin_pad_item_height" android:layout_marginTop="24.0dip" android:text="@string/pin_pad_number_7" app:layout_constraintEnd_toStartOf="@id/pin_button_8" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintHorizontal_chainStyle="spread" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/pin_button_4" style="@style/AppTheme.BorderlessButton.PinButton.Number" />
    <Button android:id="@id/pin_button_8" android:layout_width="@dimen/pin_pad_item_width" android:layout_height="@dimen/pin_pad_item_height" android:layout_marginTop="24.0dip" android:text="@string/pin_pad_number_8" app:layout_constraintEnd_toStartOf="@id/pin_button_9" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/pin_button_7" app:layout_constraintTop_toBottomOf="@id/pin_button_5" style="@style/AppTheme.BorderlessButton.PinButton.Number" />
    <Button android:id="@id/pin_button_9" android:layout_width="@dimen/pin_pad_item_width" android:layout_height="@dimen/pin_pad_item_height" android:layout_marginTop="24.0dip" android:text="@string/pin_pad_number_9" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/pin_button_8" app:layout_constraintTop_toBottomOf="@id/pin_button_6" style="@style/AppTheme.BorderlessButton.PinButton.Number" />
    <Button android:id="@id/pin_button_0" android:layout_width="@dimen/pin_pad_item_width" android:layout_height="@dimen/pin_pad_item_height" android:layout_marginTop="24.0dip" android:text="@string/pin_pad_number_0" app:layout_constraintEnd_toEndOf="@id/pin_button_8" app:layout_constraintStart_toStartOf="@id/pin_button_8" app:layout_constraintTop_toBottomOf="@id/pin_button_8" style="@style/AppTheme.BorderlessButton.PinButton.Number" />
    <ImageButton android:id="@id/pin_button_del" android:visibility="gone" android:layout_width="@dimen/pin_pad_item_width" android:layout_height="@dimen/pin_pad_item_height" android:layout_marginTop="24.0dip" android:src="@drawable/ic_pin_del" android:tint="?color_900" android:contentDescription="@null" app:layout_constraintEnd_toEndOf="@id/pin_button_9" app:layout_constraintStart_toStartOf="@id/pin_button_9" app:layout_constraintTop_toBottomOf="@id/pin_button_9" style="@style/AppTheme.BorderlessButton.PinButton" />
    <Button android:textSize="12.0sp" android:id="@id/pin_button_exit" android:visibility="gone" android:layout_width="@dimen/pin_pad_item_width" android:layout_height="@dimen/pin_pad_item_height" android:layout_marginTop="24.0dip" android:text="@string/action.sign_out" android:textAllCaps="false" app:layout_constraintEnd_toEndOf="@id/pin_button_7" app:layout_constraintStart_toStartOf="@id/pin_button_7" app:layout_constraintTop_toBottomOf="@id/pin_button_7" style="@style/AppTheme.BorderlessButton.PinButton" />
</merge>