<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:orientation="vertical" android:id="@id/scroll_view" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <View android:background="?color_500_a20" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <com.fonbet.responsiblegaming.commons.fon.ui.widget.CurrentLimitsWidget android:id="@id/current_limits" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <com.fonbet.responsiblegaming.commons.fon.ui.widget.NextLimitDatesWidget android:id="@id/next_limits" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <LinearLayout android:orientation="vertical" android:background="?color_100" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.SwitchCompat android:id="@id/limit_1_day_switch" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip" android:text="@string/deposit_limits_per_day" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" style="@style/Widget.Fonbet.SwitchButton.Blue" />
            <com.fonbet.core.impl.fon.ui.widget.inputlayout.CustomTextInputLayout android:id="@id/limit_1_day_il" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" app:errorEnabled="true" app:hintEnabled="false" style="@style/Widget.Fonbet.CustomTextInputLayout.Medium">
                <com.fonbet.core.widget.inputlayout.edittext.MonetaryInputEditText android:id="@id/limit_1_day_et" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/digit.zero" />
            </com.fonbet.core.impl.fon.ui.widget.inputlayout.CustomTextInputLayout>
            <View android:background="?color_500_a20" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <androidx.appcompat.widget.SwitchCompat android:id="@id/limit_7_days_switch" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip" android:text="@string/deposit_limits_per_week" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" style="@style/Widget.Fonbet.SwitchButton.Blue" />
            <com.fonbet.core.impl.fon.ui.widget.inputlayout.CustomTextInputLayout android:id="@id/limit_7_days_il" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" app:errorEnabled="true" app:hintEnabled="false" style="@style/Widget.Fonbet.CustomTextInputLayout.Medium">
                <com.fonbet.core.widget.inputlayout.edittext.MonetaryInputEditText android:id="@id/limit_7_days_et" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/digit.zero" />
            </com.fonbet.core.impl.fon.ui.widget.inputlayout.CustomTextInputLayout>
            <View android:background="?color_500_a20" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <androidx.appcompat.widget.SwitchCompat android:id="@id/limit_1_month_switch" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip" android:text="@string/deposit_limits_per_month" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" style="@style/Widget.Fonbet.SwitchButton.Blue" />
            <com.fonbet.core.impl.fon.ui.widget.inputlayout.CustomTextInputLayout android:id="@id/limit_1_month_il" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" app:errorEnabled="true" app:hintEnabled="false" style="@style/Widget.Fonbet.CustomTextInputLayout.Medium">
                <com.fonbet.core.widget.inputlayout.edittext.MonetaryInputEditText android:textSize="16.0sp" android:id="@id/limit_1_month_et" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/digit.zero" />
            </com.fonbet.core.impl.fon.ui.widget.inputlayout.CustomTextInputLayout>
        </LinearLayout>
        <View android:background="?color_500_a20" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <com.google.android.material.button.MaterialButton android:id="@id/submit_btn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/action.save" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" style="@style/Widget.Fonbet.Button.Filled" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>