<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#fff8f8f8" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView android:id="@id/f_debug_settings_test_processes_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="1.0dip" app:cardBackgroundColor="#ffffffff" app:cardCornerRadius="3.0dip" app:cardElevation="3.0dip" app:cardUseCompatPadding="true">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textColor="#ffffffff" android:background="@drawable/tutorial_group_bg_title" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/debug_settings_test_processes_title" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" />
                    <LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                                <TextView android:textSize="12.0sp" android:textColor="?color_900" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/debug_settings_test_processes_device_id_title" android:layout_marginEnd="50.0dip" />
                                <TextView android:textSize="12.0sp" android:textColor="?color_900_a60" android:id="@id/debug_settings_test_processes_device_id" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="50.0dip" />
                            </LinearLayout>
                            <Button android:layout_gravity="center_vertical" android:id="@id/debug_settings_test_processes_device_id_action_copy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/action.copy" />
                        </LinearLayout>
                        <com.google.android.material.button.MaterialButton android:id="@id/debug_settings_test_processes_action_open_link" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/debug_settings_test_processes_action_open_link" style="@style/Widget.Fonbet.Button.Filled" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView android:id="@id/f_debug_settings_forms_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="1.0dip" app:cardBackgroundColor="#ffffffff" app:cardCornerRadius="3.0dip" app:cardElevation="3.0dip" app:cardUseCompatPadding="true">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textColor="#ffffffff" android:background="@drawable/tutorial_group_bg_title" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/debug_setting.title.registrations" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" />
                    <LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <androidx.appcompat.widget.SwitchCompat android:layout_gravity="start" android:id="@id/f_debug_settings_sign_up_prefill" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/debug_setting.sign_up.red" android:fontFamily="sans-serif" />
                        <TextView android:textSize="12.0sp" android:textColor="#5003243d" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/debug_setting.session_only" android:layout_marginEnd="50.0dip" />
                        <androidx.appcompat.widget.SwitchCompat android:layout_gravity="start" android:id="@id/f_debug_settings_remote_ident_dev_proto" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/debug_setting.remote_ident.dev_prototype" android:fontFamily="sans-serif" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="1.0dip" app:cardBackgroundColor="#ffffffff" app:cardCornerRadius="3.0dip" app:cardElevation="3.0dip" app:cardUseCompatPadding="true">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textColor="#ffffffff" android:background="@drawable/tutorial_group_bg_title" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/debug_setting.title.general" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" />
                    <LinearLayout android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="16.0dip" android:paddingEnd="16.0dip">
                        <TextView android:textSize="16.0sp" android:layout_gravity="center" android:id="@id/f_debug_settings_firbase_id" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
                        <Button android:layout_gravity="center" android:id="@id/f_debug_settings_copy_firebase_id" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/action.copy" />
                    </LinearLayout>
                    <androidx.appcompat.widget.SwitchCompat android:layout_gravity="start" android:id="@id/f_debug_settings_show_upd_info" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/debug_setting.show_upd_info" android:fontFamily="sans-serif" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" />
                    <androidx.appcompat.widget.SwitchCompat android:layout_gravity="start" android:id="@id/f_debug_settings_mock_audio_translations" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/debug_setting.mock_audio_translations" android:fontFamily="sans-serif" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>